--- a/WebMVC/appsettings.json
+++ b/WebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=WebMVCContext-c7554e62-7b76-4800-b6bd-55844970fde8;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
