MySQL adaptation and first migration

--- a/WebMVC/appsettings.json
+++ b/WebMVC/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=WebMVCContext-c7554e62-7b76-4800-b6bd-55844970fde8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"WebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=WebMVCContext-c7554e62-7b76-4800-b6bd-55844970fde8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebMVCContext": "Server=localhost;userid=developer;password=p690201;database=webmvc"
   }
 }
